# argocd-manager

./: Makefile  README.md  argo-manager.py  requirements.txt  setup.cfg
argo_manager.egg-info/: SOURCES.txt
argocd_manager/: __init__.py  cli.py  colors.py  config.py
