[metadata]
name = argo-manager
version = 0.1.0
description = Small ArgoCD multi-cluster manager
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
license = MIT

[options]
packages = find:
install_requires =

[options.entry_points]
console_scripts =
    argo-manager = argocd_manager.cli:run
